feat: 간단한 세션 로그인 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=websocket
+spring.application.name=aurasphere
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/aurasphere
+spring.datasource.username=elice-user
+spring.datasource.password=qwer1234!@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.servlet.session.timeout= 30m
